--- a/main.css
+++ b/main.css
@@ -2,7 +2,8 @@
 
 /* Body styles */
 body {
-    background-color: #f0f0f0; 
+    /*background-color: #f0f0f0; */
+    background-color: #e5deca;
     margin: 0; 
     text-align: center; 
 }
