--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 /* Body styles */
 body {
     /*background-color: #f0f0f0; */
-    background-color: #e5deca;
+    background-color: #dd571c;
     margin: 0; 
     text-align: center; 
 }
@@ -30,6 +30,7 @@ body {
 /* Header styles */
 h1 {
     font-weight: bold; 
+    font-family: papyrus, fantasy;
     text-align: center; 
     padding: 10px 20px; 
     margin-bottom: 20px; 
