--- a/main.css
+++ b/main.css
@@ -24,7 +24,8 @@ body {
     border: 2px solid black;
     padding: 20px;
     overflow: auto;
-    background-color: white; 
+  /*  background-color: white; */
+    background-color: #301934;
 }
 
 /* Header styles */
@@ -48,7 +49,8 @@ nav {
     position: fixed; 
     left: 0; 
     top: 0; 
-    background-color: #333; 
+ /*  background-color: #333; 
+*/    background-color: #301934;
     width: 70px; 
     height: 100vh;
     transition: width 0.3s; 
@@ -74,14 +76,16 @@ nav ul {
 /* Nav menu styles */
 nav a {
     display: block;
-    color: white;
+   /*color: white;*/
+    color: #301934;
     padding: 15px;
     text-decoration: none;
 }
 
 /* Nav menu hover styles */
 nav a:hover {
-    background-color: #555; 
+   /* background-color: #555; */
+    background-color: #301934;
 }
 
 /* Text input styles */
