--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ body {
     background-color: #dd571c;
     margin: 0; 
     text-align: center; 
+    text-color: #301934;
 }
 
 /* Container styles */
