--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
     background-color: #dd571c;
     margin: 0; 
     text-align: center; 
-    text-color: #301934;
+    color: #301934;
 }
 
 /* Container styles */
