--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ h1 {
     border-radius: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
     display: inline-block; 
+    outline-color: white;
 }
 
 /* Nav menu styles */
@@ -79,7 +80,7 @@ nav ul {
 nav a {
     display: block;
    /*color: white;*/
-    color: #301934;
+    color: #dd571c;
     padding: 15px;
     text-decoration: none;
 }
