--- a/main.css
+++ b/main.css
@@ -99,3 +99,34 @@ nav a:hover {
     margin-bottom: 8px;
     box-sizing: border-box; 
 }
+
+/*confetti animation*/
+@keyframes confetti-fall {
+    0% {
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(1000px) rotate(360deg);
+        opacity: 0;
+    }
+}
+
+.confetti {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: transparent;
+    border-radius: 50%;
+    animation: confetti-fall 5s infinite;
+}
+
+#confetti-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999; /* Set a high z-index to ensure it's rendered above other elements */
+    pointer-events: none; /* Ensure that the confetti container does not block interactions with other elements */
+}
