--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
     margin: 0; 
     text-align: center; 
     color: white;
-    outline-color: white;
+    /*outline-color: white;*/
     font-weight: bold; 
     font-family: papyrus, fantasy;
 }
