--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
     color: white;
     /*outline-color: white;*/
     font-weight: bold; 
-    font-family: papyrus, fantasy;
+    font-family: "Fantasy";
 }
 
 /* Container styles */
