--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ body {
 /* Header styles */
 h1 {
     font-weight: bold; 
-    font-family: papyrus, fantasy;
+    font-family: "Fantasy";
     text-align: center; 
     padding: 10px 20px; 
     margin-bottom: 20px; 
