--- a/main.css
+++ b/main.css
@@ -35,8 +35,8 @@ body {
 
 /* Header styles */
 h1 {
-    font-weight: bold; 
     font-family: "Fantasy";
+    font-style: italic;
     text-align: center; 
     padding: 10px 20px; 
     margin-bottom: 20px; 
