--- a/main.css
+++ b/main.css
@@ -32,7 +32,42 @@ body {
   /*  background-color: white; */
     background-color: #301934;
 }
-
+.box2 {
+    width: 45%;
+    height: 300px;
+    border: 2px solid black;
+    padding: 20px;
+    overflow: auto;
+  /*  background-color: white; */
+    background-color: #301934;
+}
+.box3 {
+    width: 45%;
+    height: 300px;
+    border: 2px solid black;
+    padding: 20px;
+    overflow: auto;
+  /*  background-color: white; */
+    background-color: #301934;
+}
+.box4 {
+    width: 45%;
+    height: 500px;
+    border: 5px solid white;
+    padding: 30px;
+    overflow: auto;
+  /*  background-color: white; */
+    background-color: #301934;
+}
+.box5 {
+    width: 45%;
+    height: 400px;
+    border: 8px solid orange;
+    padding: 40px;
+    overflow: auto;
+  /*  background-color: white; */
+    background-color: #301934;
+}
 /* Header styles */
 h1 {
     font-family: "Fantasy";
