--- a/main.css
+++ b/main.css
@@ -25,9 +25,9 @@ body {
 /* Box styles */
 .box {
     width: 45%;
-    height: 300px;
+    height: 350px;
     border: 2px solid black;
-    padding: 20px;
+    padding: 50px;
     overflow: auto;
   /*  background-color: white; */
     background-color: #301934;
@@ -35,7 +35,7 @@ body {
 .box2 {
     width: 45%;
     height: 300px;
-    border: 2px solid black;
+    border: 2px solid purple;
     padding: 20px;
     overflow: auto;
   /*  background-color: white; */
@@ -44,8 +44,8 @@ body {
 .box3 {
     width: 45%;
     height: 300px;
-    border: 2px solid black;
-    padding: 20px;
+    border: 2px solid green;
+    padding: 10px;
     overflow: auto;
   /*  background-color: white; */
     background-color: #301934;
