--- a/main.css
+++ b/main.css
@@ -35,8 +35,8 @@ body {
 .box2 {
     width: 45%;
     height: 300px;
-    border: 2px solid purple;
-    padding: 20px;
+    border: 2px solid orange;
+    padding: 60px;
     overflow: auto;
   /*  background-color: white; */
     background-color: #301934;
@@ -45,7 +45,7 @@ body {
     width: 45%;
     height: 300px;
     border: 2px solid green;
-    padding: 10px;
+    padding: 50px;
     overflow: auto;
   /*  background-color: white; */
     background-color: #301934;
